--- a/resume.html
+++ b/resume.html
@@ -3,14 +3,16 @@
 <html>
 
 <head>
+	<meta charset="UTF-8">
 	<title> Resume </title>
+	<link rel='stylesheet' href='portfolio.css'/>
 </head>
 
 <h1> Resume </h1>
 
 <h2> Name: Tiffani Lau <br/>
 	tiffani.lau@tufts.edu </h2>
-<body> 
+<div> 
 	Education: Tufts University <br/> 
 	Expected Graduation: May 2016 <br/> 
 	B.S. Quantitative Economics &amp; Computer Science Minor <br/> 
@@ -18,7 +20,7 @@
 	Professional Experience: <br/> 
 	Omni Mortgage Co., Inc.<br/>
 	<ul>
-	<li>Reviewed clients&#39 credit reports, tax returns, bank statements, and other financial forms as part of loan qualification. </li> 
+	<li>Reviewed clients&#39; credit reports, tax returns, bank statements, and other financial forms as part of loan qualification. </li> 
 	<li>Processed property profiles to aid in determining whether it was an opportune time to refinance.  <br/>
 	<li>Improved client relationships by compiling economic newsletters to keep clients updated about interest rates and market trends. </li>
 	<li>Amended Quality Control Program to verify its compliance with Fannie Mae regulations. <br/>
@@ -29,6 +31,7 @@
 		Skills: Programming Lanuages: C++  <br/>
 		Microsoft Office - Excel  <br/>
 		Activities: Tufts Financial Group, Alpha Omicron Pi Treasurer
+	</div>
 
 
 		</html>
