--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
  
  <head>
+ 	<meta charset="UTF-8">
 	<title> Index </title>
 	<link rel='stylesheet' href='portfolio.css'/>
 </head>
@@ -12,16 +13,16 @@
 <h2> Tiffani Lau </h2>
 
 
-<body>
-<img src = "file:/Users/Tiffani/Desktop/Portfolio/bunny.jpg">  </br>
-<a href = "file:/Users/Tiffani/Desktop/Portfolio/resume.html"> Resume </a> </br> </br>
-<a href = "file:/Users/Tiffani/Desktop/Portfolio/bio.html"> Biography </a> </br>
+<div id = "index">
+<img src = "file:////Users/Tiffani/Desktop/Portfolio/bunny.jpg" alt = "baby bunny">  <br/>
+<p id = 'one'><a href = "file:////Users/Tiffani/Desktop/Portfolio/resume.html"> Resume </a> <br/> <br/> </p>
+<p id = '2'><a href = "file:////Users/Tiffani/Desktop/Portfolio/bio.html"> Biography </a> <br/> </p>
 
 
 
 
 
-</body>
+</div>
 
 
 </html>
