--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
 <div id = "index">
-<img src = "file:////Users/Tiffani/Desktop/Portfolio/bunny.jpg" alt = "baby bunny">  <br/>
+<img src = "bunny.jpg" alt = "baby bunny">  <br/>
 <p id = 'one'><a href = "file:////Users/Tiffani/Desktop/Portfolio/resume.html"> Resume </a> <br/> <br/> </p>
 <p id = '2'><a href = "file:////Users/Tiffani/Desktop/Portfolio/bio.html"> Biography </a> <br/> </p>
 
