removed file paths

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 <div id = "index">
 <img src = "bunny.jpg" alt = "baby bunny">  <br/>
-<p id = 'one'><a href = "file:////Users/Tiffani/Desktop/Portfolio/resume.html"> Resume </a> <br/> <br/> </p>
-<p id = '2'><a href = "file:////Users/Tiffani/Desktop/Portfolio/bio.html"> Biography </a> <br/> </p>
+<p id = 'one'><a href = "resume.html"> Resume </a> <br/> <br/> </p>
+<p id = '2'><a href = "bio.html"> Biography </a> <br/> </p>
 
 
 
