--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
  	<meta charset="UTF-8">
 	<title> Index </title>
 	<link rel='stylesheet' href='portfolio.css'/>
+	<meta http-equiv="refresh" content="0; url=http://lautiffani.github.io/" />
 </head>
 
 <h1> Index </h1> 
